--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/styles": "^4.5.2",
     "bootstrap": "^4.3.1",
     "react": "^16.11.0",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^16.11.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
