--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
+  "homepage": "https://brianascraig.github.io/Portfolio/",
   "name": "briana-craig-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@material-ui/styles": "^4.5.2",
     "bootstrap": "^4.3.1",
+    "gh-pages": "^2.1.1",
     "react": "^16.11.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^16.11.0",
@@ -16,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "@material-ui/core": "^4.5.2"
